# neobots

./: .gitignore  Pipfile  README.md  RESET.py  client.py  config.toml  freebies.py  neoaccount.py  neobots.py  pyproject.toml
classes/: NeoAccount.py  bank.py  config.py  dailies.py  habi.py  neoaccount.py
data/habimaps/: 0.txt  1.txt  2.txt
