[tool.poetry]
name = "neobots"
version = "0.1.0"
description = "Autoplayer for neobots"
authors = ["txtsd <thexerothermicsclerodermoid@gmail.com>"]
license = "GPL-3.0-only"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
requests = "^2.28.1"
beautifulsoup4 = "^4.11.1"
lxml = "^4.9.1"
toml = "^0.10.2"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
